--- a/app/src/main/res/layout/artist_fragment.xml
+++ b/app/src/main/res/layout/artist_fragment.xml
@@ -16,6 +16,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:padding="4dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
 
