--- a/app/src/main/res/layout/group_fragment.xml
+++ b/app/src/main/res/layout/group_fragment.xml
@@ -4,19 +4,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/forest">
 
 
     <ImageView
         android:id="@+id/groupImage"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:scaleType="fitXY"
         app:layout_constraintBottom_toTopOf="@+id/groupTableLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_launcher_background"
+        app:srcCompat="@drawable/reputation"
+        android:overScrollMode="always"
         />
 
 
@@ -28,12 +31,15 @@
         app:layout_constraintBottom_toTopOf="@+id/groupRecyclerView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/groupImage">
+        app:layout_constraintTop_toBottomOf="@+id/groupImage"
+        android:background="@color/colorWhite"
+        android:overScrollMode="always">
 
         <LinearLayout
             android:id="@+id/groupLinearLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingBottom="2dp">
 
             <TextView
                 android:id="@+id/groupName"
@@ -45,7 +51,8 @@
                 android:text="groupName"
                 android:textColor="@color/colorBlack"
                 android:textSize="25sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:gravity="center"/>
 
             <ImageButton
                 android:id="@+id/groupMenu"
