--- a/app/src/main/res/layout/playlist_gridview.xml
+++ b/app/src/main/res/layout/playlist_gridview.xml
@@ -32,24 +32,24 @@
             android:scaleType="fitCenter"
             android:src="@drawable/grid_play_selector" />
 
-        <TableLayout
-            android:id="@+id/playlistTableLayout"
+        <LinearLayout
+            android:id="@+id/playlistLinearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/playlistImage"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:layout_marginStart="0dp"
-            android:layout_marginEnd="0dp"
-            android:layout_marginBottom="0dp">
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="0dp">
 
-            <LinearLayout
-                android:id="@+id/playlistLinearLayout"
+            <TableLayout
+                android:id="@+id/playlistTableLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="0dp"
-                android:layout_marginTop="0dp"
-                android:layout_marginEnd="0dp">
+                android:layout_below="@+id/playlistImage"
+                android:layout_weight="1">
+
 
                 <TextView
                     android:id="@+id/playlistName"
@@ -64,25 +64,25 @@
                     android:textSize="15sp"
                     android:textStyle="bold" />
 
-                <ImageButton
-                    android:id="@+id/playlistMenu"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:background="@android:color/transparent"
-                    android:src="@drawable/cardview_menu_icon" />
+                <TextView
+                    android:id="@+id/playlistSongsNumber"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="7dp"
+                    android:text="playlistSongsNumber"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="10sp"
+                    android:textStyle="italic" />
+            </TableLayout>
 
-            </LinearLayout>
+            <ImageButton
+                android:id="@+id/playlistMenu"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:background="@android:color/transparent"
+                android:src="@drawable/cardview_menu_icon" />
 
-            <TextView
-                android:id="@+id/playlistSongsNumber"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="playlistSongsNumber"
-                android:textColor="@color/colorWhite"
-                android:textSize="10sp"
-                android:textStyle="italic"
-                android:paddingLeft="7dp"/>
-        </TableLayout>
+        </LinearLayout>
 
     </RelativeLayout>
 
